# thelook-project

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  CLAUDE.md  LICENSE  README.md  catalog.json  graph.gpickle  graph_summary.json  index.html  manifest.json  partial_parse.msgpack  pyproject.toml  run_results.json
.github/workflows/: README.md  dbt-docs.yml  python-ci.yml  terraform-ci.yml
compiled/thelook_mds/models/marts/core/: dim_dates.sql  dim_products.sql  dim_users.sql
compiled/thelook_mds/models/marts/core/_core__models.yml/: not_null_dim_dates_date_day.sql  not_null_dim_products_product_id.sql  not_null_dim_users_registered_at.sql  not_null_dim_users_user_id.sql  unique_dim_dates_date_day.sql  unique_dim_products_product_id.sql  unique_dim_users_user_id.sql
compiled/thelook_mds/models/marts/finance/: fct_order_items.sql  fct_orders.sql
compiled/thelook_mds/models/marts/finance/_finance__models.yml/: not_null_fct_order_items_order_id.sql  not_null_fct_order_items_order_item_id.sql  not_null_fct_order_items_ordered_date.sql  not_null_fct_order_items_product_id.sql  not_null_fct_order_items_user_id.sql  not_null_fct_orders_order_id.sql  not_null_fct_orders_ordered_date.sql  not_null_fct_orders_user_id.sql  relationships_fct_order_items_user_id__user_id__ref_dim_users_.sql  relationships_fct_orders_user_id__user_id__ref_dim_users_.sql  unique_fct_order_items_order_item_id.sql  unique_fct_orders_order_id.sql
compiled/thelook_mds/models/staging/akeneo/: stg_akeneo__products.sql
compiled/thelook_mds/models/staging/akeneo/_akeneo__models.yml/: not_null_stg_akeneo__products_product_id.sql  unique_stg_akeneo__products_product_id.sql
compiled/thelook_mds/models/staging/segment/: stg_segment__users.sql
compiled/thelook_mds/models/staging/segment/_segment__models.yml/: not_null_stg_segment__users_registered_at.sql  not_null_stg_segment__users_user_id.sql  unique_stg_segment__users_user_id.sql
compiled/thelook_mds/models/staging/shopify/: stg_shopify__order_items.sql  stg_shopify__orders.sql
compiled/thelook_mds/models/staging/shopify/_shopify__models.yml/: not_null_stg_shopify__order_items_order_item_id.sql  not_null_stg_shopify__order_items_ordered_at.sql  not_null_stg_shopify__orders_order_id.sql  not_null_stg_shopify__orders_ordered_at.sql  unique_stg_shopify__order_items_order_item_id.sql  unique_stg_shopify__orders_order_id.sql
docs/: infrastructure-and-governance-phase-report.md
docs/ADR/: 0000-data-warehouse-snowflake-on-aws.md  0001-ingestion-dlt-vs-airbyte.md  0002-orchestration-dagster-vs-airflow.md  0003-bi-evidence-metabase-vs-power-bi.md  0004-iac-terraform-for-snowflake.md  0005-always-on-platform-oci-free-tier.md  0006-single-analytic-engine-snowflake.md  0007-semantic-layer-cube-cloud.md  0008-admin-bootstrap-retained-as-break-glass.md  0009-oci-payg-with-cost-guardrails.md  0010-simulated-source-mapping.md  template.md
infra/docker/: .env.example  Caddyfile  README.md  docker-compose.yml  workspace.yaml
infra/terraform/oci/: README.md  backend.tf  bastion.tf  budget.tf  cloud-init.yaml  compute.tf  main.tf  networking.tf  outputs.tf  quotas.tf  storage.tf  terraform.tfvars.example  variables.tf
infra/terraform/snowflake/: backend.tf  cost_guardrails.tf  databases.tf  grants.tf  main.tf  outputs.tf  roles.tf  terraform.tfvars.example  terraform_rbac.tf  users.tf  variables.tf  warehouses.tf
ingestion/: README.md  pyproject.toml  thelook_finance.py
ingestion/.dlt/: .gitignore  secrets.toml.example
ingestion/tests/: test_thelook_finance.py
transformation/: .gitignore  dbt_project.yml  profiles.yml.example  pyproject.toml
transformation/.dbt-ci/: profiles.yml
transformation/macros/: get_custom_schema.sql  pseudonymise.sql
transformation/models/marts/core/: _core__models.yml  dim_dates.sql  dim_products.sql  dim_users.sql
transformation/models/marts/finance/: _finance__models.yml  fct_order_items.sql  fct_orders.sql
transformation/models/staging/akeneo/: _akeneo__models.yml  _akeneo__sources.yml  stg_akeneo__products.sql
transformation/models/staging/segment/: _segment__models.yml  _segment__sources.yml  stg_segment__users.sql
transformation/models/staging/shopify/: _shopify__models.yml  _shopify__sources.yml  stg_shopify__order_items.sql  stg_shopify__orders.sql
