[project]
name = "thelook-ingestion"
version = "0.1.0"
description = "dlt ingestion pipelines: BigQuery TheLook eCommerce -> Snowflake RAW."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gaël Mukunde" }]
dependencies = [
  "dlt[snowflake]>=1.4.0",
  "google-cloud-bigquery>=3.27.0",
  "db-dtypes>=1.3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  # Skip integration tests by default. Run them explicitly with `pytest -m integration`.
  "-m", "not integration",
]
markers = [
  "integration: requires real Snowflake + GCP credentials. Skipped by default; run with `pytest -m integration`.",
]
