[project]
name = "thelook-transformation"
version = "0.1.0"
description = "dbt models: Snowflake RAW.THELOOK -> ANALYTICS staging + marts."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gaël Mukunde" }]
dependencies = [
  "dbt-snowflake>=1.8.0",
]

[tool.uv]
package = false
